@@ -3,22 +3,22 @@ package ti4.helpers;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import ti4.generator.Mapper;
+import ti4.image.Mapper;
 import ti4.map.Player;
 import ti4.map.UnitHolder;
 import ti4.model.CombatModifierModel;
 import ti4.model.NamedCombatModifierModel;
 import ti4.model.TemporaryCombatModifierModel;
 import ti4.model.TileModel;
+import ti4.service.combat.CombatRollType;
 
 public class CombatTempModHelper {
 
     public static void InitializeNewTempMods(Player player, TileModel tile, UnitHolder holder) {
         List<TemporaryCombatModifierModel> unusedMods = player.getNewTempCombatModifiers();
-        unusedMods = unusedMods.stream().filter(mod -> mod.getUseInTurn() == player.getNumberTurns())
-            .collect(Collectors.toList());
+        unusedMods = unusedMods.stream().filter(mod -> mod.getUseInTurn() == player.getNumberOfTurns())
+            .toList();
         for (TemporaryCombatModifierModel mod : unusedMods) {
             mod.setUseInSystem(tile.getId());
             mod.setUseInUnitHolder(holder.getName());
@@ -31,7 +31,7 @@ public class CombatTempModHelper {
         List<TemporaryCombatModifierModel> tempMods = new ArrayList<>(player.getTempCombatModifiers());
 
         for (TemporaryCombatModifierModel mod : tempMods) {
-            if (mod.getUseInTurn() != player.getNumberTurns()) {
+            if (mod.getUseInTurn() != player.getNumberOfTurns()) {
                 player.removeTempMod(mod);
                 continue;
             }
@@ -52,8 +52,13 @@ public class CombatTempModHelper {
         }
     }
 
-    public static List<NamedCombatModifierModel> BuildCurrentRoundTempNamedModifiers(Player player, TileModel tile,
-        UnitHolder holder, Boolean isApplyToOpponent, CombatRollType rollType) {
+    public static List<NamedCombatModifierModel> BuildCurrentRoundTempNamedModifiers(
+        Player player,
+        TileModel tile,
+        UnitHolder holder,
+        Boolean isApplyToOpponent,
+        CombatRollType rollType
+    ) {
         EnsureValidTempMods(player, tile, holder);
         List<TemporaryCombatModifierModel> tempMods = new ArrayList<>(player.getTempCombatModifiers());
         List<NamedCombatModifierModel> currentRoundResults = new ArrayList<>();
@@ -66,13 +71,12 @@ public class CombatTempModHelper {
         }
         currentRoundResults = currentRoundResults.stream()
             .filter(mod -> mod.getModifier().getApplyToOpponent().equals(isApplyToOpponent))
-            .filter(mod -> mod.getModifier().getForCombatAbility().equals(rollType.toString())).toList();
+            .filter(mod -> mod.getModifier().getForCombatAbility().equals(rollType)).toList();
 
         return currentRoundResults;
     }
 
-    public static TemporaryCombatModifierModel GetPossibleTempModifier(String relatedType, String relatedID,
-        int currentTurnCount) {
+    public static TemporaryCombatModifierModel getPossibleTempModifier(String relatedType, String relatedID, int currentTurnCount) {
         TemporaryCombatModifierModel result = null;
         var combatModifiers = Mapper.getCombatModifiers();
         Optional<CombatModifierModel> relevantMod = combatModifiers.values().stream()
