@@ -3,6 +3,7 @@ package ti4.selections.selectmenus;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+
 import net.dv8tion.jda.api.entities.emoji.Emoji;
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
 import net.dv8tion.jda.api.events.interaction.component.StringSelectInteractionEvent;
@@ -10,16 +11,14 @@ import net.dv8tion.jda.api.interactions.components.ActionRow;
 import net.dv8tion.jda.api.interactions.components.selections.SelectOption;
 import net.dv8tion.jda.api.interactions.components.selections.StringSelectMenu;
 import org.apache.commons.collections4.ListUtils;
-import ti4.generator.Mapper;
 import ti4.helpers.ButtonHelper;
-import ti4.helpers.Emojis;
-import ti4.helpers.Helper;
+import ti4.image.Mapper;
+import ti4.listeners.context.SelectionMenuContext;
 import ti4.map.Game;
-import ti4.map.GameManager;
-import ti4.map.Player;
 import ti4.message.MessageHelper;
 import ti4.model.FactionModel;
 import ti4.selections.Selection;
+import ti4.service.emoji.FactionEmojis;
 
 public class SelectFaction implements Selection {
 
@@ -31,22 +30,17 @@ public class SelectFaction implements Selection {
     }
 
     @Override
-    public void execute(StringSelectInteractionEvent event) {
-        Game game = GameManager.getInstance().getUserActiveGame(event.getUser().getId());
+    public void execute(StringSelectInteractionEvent event, SelectionMenuContext context) {
+        Game game = context.getGame();
         if (game == null) {
             MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Game could not be found");
             return;
         }
-        Player player = game.getPlayer(event.getUser().getId());
-        player = Helper.getGamePlayer(game, player, event, null);
-        if (player == null) {
-            MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Player could not be found");
-            return;
-        }
 
-        MessageHelper.sendMessageToChannel(event.getMessageChannel(), "You selected: " + event.getSelectedOptions().get(0).getLabel());
-        String fakeButtonID = selectionID + "_" + event.getUser().getId() + "_" + event.getValues().get(0);
-        ButtonHelper.resolveSetupStep2(player, game, event, fakeButtonID);
+        MessageHelper.sendMessageToChannel(event.getMessageChannel(), "You selected: " + event.getSelectedOptions().getFirst().getLabel());
+
+        String fakeButtonID = selectionID + "_" + event.getUser().getId() + "_" + event.getValues().getFirst();
+        ButtonHelper.resolveSetupStep2(game, event, fakeButtonID);
     }
 
     public static void offerFactionSelectionMenu(GenericInteractionCreateEvent event) {
@@ -57,7 +51,7 @@ public class SelectFaction implements Selection {
         for (List<FactionModel> factionPage : factionPages) {
             StringSelectMenu.Builder menuBuilder = StringSelectMenu.create(selectionID);
             for (FactionModel faction : factionPage) {
-                Emoji emojiToUse = Emoji.fromFormatted(Emojis.getFactionIconFromDiscord(faction.getAlias()));
+                Emoji emojiToUse = FactionEmojis.getFactionIcon(faction.getAlias()).asEmoji();
                 SelectOption option = SelectOption.of(faction.getFactionName(), faction.getAlias())
                     .withDescription(faction.getAlias())
                     .withLabel(faction.getAutoCompleteName());
